--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "dependencies": {
     "chart.js": "^4.2.0",
     "vue": "^3.2.45",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vue3-smooth-dnd": "^0.0.5"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^4.0.0",
